# Mnist_CNN

./: Mnist_CNN.ipynb  README.md  pyproject.toml  submission.csv
